updated dependency management

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
 }
 
 group 'com.gufli.brickdatabase'
@@ -18,21 +19,19 @@ dependencies {
     compileOnly 'io.ebean:ebean:12.14.0'
     compileOnly 'io.ebean:ebean-ddl-generator:12.14.0'
     compileOnly 'io.ebean:ebean-querybean:12.14.0'
-    annotationProcessor 'io.ebean:querybean-generator:12.14.0'
-
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
     // TESTING
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.2')
-
     testImplementation 'com.github.Minestom:Minestom:1.18-SNAPSHOT'
+
     testImplementation 'io.ebean:ebean:12.14.0'
     testImplementation 'io.ebean:ebean-ddl-generator:12.14.0'
     testImplementation 'io.ebean:ebean-querybean:12.14.0'
 
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testRuntimeOnly 'com.h2database:h2:2.0.204'
+    testRuntimeOnly 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 }
 
 test {
