updated gradle files

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,5 @@
 plugins {
     id 'java'
-    id 'java-library'
-    id 'maven-publish'
-    id('io.ebean') version '12.14.0'
 }
 
 group 'com.gufli.brickutils'
@@ -15,6 +12,7 @@ compileJava {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'maven-publish'
 
     sourceCompatibility = 1.17
     targetCompatibility = 1.17
@@ -34,15 +32,14 @@ subprojects {
     }
 }
 
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-//            groupId = 'com.github.MinestomBrick'
-//            artifactId = 'BrickDatabase'
-//            version = '1.0.0'
-
-            from components.java
-        }
-    }
-}
+//publishing {
+//    publications {
+//        mavenJava(MavenPublication) {
+////            groupId = 'com.github.MinestomBrick'
+////            artifactId = 'BrickDatabase'
+////            version = '1.0.0'
+//
+//            from components.java
+//        }
+//    }
+//}
