and we keep trying

--- a/database/build.gradle
+++ b/database/build.gradle
@@ -36,9 +36,9 @@ afterEvaluate {
             release(MavenPublication) {
                 from components.release
 
-                groupId = 'com.gufli.brickutils'
+                groupId = rootProject.group
                 artifactId = 'database'
-                version = '0.1.4'
+                version = rootProject.version
             }
         }
     }
