--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ compileJava {
     targetCompatibility = 1.17
 }
 
-subprojects {
+allprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
 
