--- a/translation/build.gradle
+++ b/translation/build.gradle
@@ -4,6 +4,16 @@ plugins {
 
 dependencies {
     compileOnly 'com.github.Minestom:Minestom:-SNAPSHOT'
+
+    // TEST
+
+    testImplementation 'com.github.Minestom:Minestom:-SNAPSHOT'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+}
+
+test {
+    useJUnitPlatform()
 }
 
 afterEvaluate {
