let's try github packages

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,9 +7,8 @@ on:
     branches: [main]
 
 jobs:
-  test-and-build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
@@ -17,8 +16,22 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Executing permissions for graddle
-        run: 'chmod +x gradlew'
-
       - name: Test with Gradle
         run: './gradlew test'
+
+  publish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+      - name: Publish package
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: publish
+        env:
+          GITHUB_ACTOR: ${{ secrets.GITHUB_TOKEN }}
