--- a/build.gradle
+++ b/build.gradle
@@ -30,4 +30,17 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url 'https://repo.spongepowered.org/maven' }
     }
+
+    publishing {
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/MinestomBrick/BrickUtils")
+                credentials {
+                    username = System.getenv("GITHUB_ACTOR")
+                    password = System.getenv("GITHUB_TOKEN")
+                }
+            }
+        }
+    }
 }
