--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,4 @@ jobs:
       - name: Publish package
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: publish
-        env:
-          ORG_GRADLE_PROJECT_JorisgUsername: ${{ secrets.JORISG_REPO_USERNAME }}
-          ORG_GRADLE_PROJECT_JorisgPassword: ${{ secrets.JORISG_REPO_PASSWORD }}
+          arguments: publish -PJorisgUsername=${{ secrets.JORISG_REPO_USERNAME }} -PJorisgPassword ${{ secrets.JORISG_REPO_PASSWORD }}
